# caradno-plutus-smart-contract-template

./: .gitignore  OnChainSmartContractCommand.txt  README.md  cabal.project  ppbl2023-plutus-template.cabal
AddressValidator/: contract.plutus  datum.json  lock.tx  lock.tx.signed  payment.skey  redeemer.json  script.addr  unlock.tx  unlock.tx.signed
mathGame/: datum.json  lock.tx  lock.tx.signed  payment.addr  payment.pkh  payment.vkey  script.addr  smbgame.plutus  unlock.tx  unlock.tx.signed
output/: typed-hello-world.plutus
scripts/: lock.tx  lock.tx.signed  payment.addr  payment.skey  payment.vkey  script.addr  unlock.tx
scripts2/: foodOrderReward.plutus  lock.tx  lock.tx.signed  payment.addr  payment.skey  payment.vkey  script.addr  unlock.tx  unlock.tx.signed
scripts3/: foodOrderHighValueReward.plutus  lock.tx  lock.tx.signed  payment.addr  payment.skey  payment.vkey  script.addr
scripts4/: foodOrderReward.plutus  lock.tx  payment.addr  payment.skey  payment.vkey  script.addr
scripts5/: bettingContract.plutus
scriptstwo/: datum.json  guessingGame.plutus  lock.tx  lock.tx.signed  unlock.tx  unlock.tx.signed
src/: BettingContract.hs  FoodOrderHighValueReward.hs  FoodOrderReward.hs  Game.hs  GenerateDatum.hs  H.hs  OneHelloWorld.hs  v.hs
src/AddressValidator/: Contract.hs
src/FoodOrderReward/: Compiler.hs
src/HelloWorld/: Compiler.hs  TypedValidator.hs  Validator.hs
src/MathGame/: Game.hs
src/MyHelloWorld/: Compiler.hs  Validator.hs
src/SmC/: Compiler.hs
src/TokenVesting/: Compiler.hs
